Updated some code

--- a/knowledge.html
+++ b/knowledge.html
@@ -4,24 +4,36 @@
 		<meta charset="UTF-8">
 		<title>Title</title>
 		<link rel="stylesheet" href="./CSS/style.css">
+		<h1>بىلىگ</h1>
 </head>
 <body>
-<h1>بىلىگ</h1>
-<h2>ئۇيغۇرچە رەڭ ئاتالغۇلىرى</h2>
+<h2 class="color-title">ئۇيغۇرچە رەڭ ئاتالغۇلىرى</h2>
+
+<div style="display: inline-block;">
 <h2 class="color-title" id="red">قىزىل </h2>
 <img class="color" src="./CSS/red.png" alt="red">
+</div>
 
+<div style="display: inline-block;">
 <h2 class="color-title" id="yellow">سېرىق</h2>
 <img class="color" src="./CSS/yellow.png" alt="yellow">
+</div>
 
+<div style="display: inline-block;">
 <h2 class="color-title" id="blue">كۆك</h2>
 <img class="color" src="./CSS/blue.png" alt="blue">
+</div>
 
+<div style="display: inline-block;">
 <h2 class="color-title" id="orange">توقسېرىق</h2>
 <img class="color" src="./CSS/orange.png" alt="orange">
+</div>
 
+<div style="display: inline-block;">
 <h2 class="color-title" id="green">يېشىل</h2>
 <img class="color" src="./CSS/green.png" alt="green">
+</div>
+
 
 
 </body>
