--- a/poem.html
+++ b/poem.html
@@ -4,12 +4,16 @@
 		<meta charset="UTF-8">
 		<title>Poems</title>
 		<link rel="stylesheet" href="./CSS/style.css">
+		<h1>شېئىرلار</h1>
 </head>
 <body>
-<h1>شېئىرلار</h1>
 
-<h2>ئەلشىر نەۋائى شېئىرلىرى</h2>
-<img src="images/Elshir Neva'i.jpg" alt="Elshir Neva'i photo">
+
+<h2 class="poem-header">ئەلشىر نەۋائى شېئىرلىرى</h2>
+<img class="elshir-photo" src="images/Elshir Neva'i.jpg" alt="Elshir Neva'i photo">
+<p class="elshir-bio">
+	ئەلشىر ناۋائى (پارىسچە، چاغاتايچە: نظام الدین على شير هروی; Nizām al-Din ʿAlī Shīr Herawī) - ئۇيغۇر ۋە ئۆزبېك كلاسسىك ئەدەبىياتىدىكى ئەڭ مۇھىم شائىرلارنىڭ بىرى بولۇپلا قالماي، زامانىدىكى دۆلەت ۋە جامائەت ئەربابىدۇر. ناۋائىنىڭ ئىجادىيىتى ۋە ئەسەرلىرى چاغاتاي ئۇيغۇرچىسى ۋە چاغاتاي ئەدەبىياتىنىڭ تەرەققى قىلىشىدا ئىنتايىن مۇھىم رول ئوينىغان.
+</p>
 <p>
 		<br/> ئەشرەقەت مىن ئەكسى شەمسىلكەئسى ئەنۋارۇلھۇدا،
 		<br/> يار ئەكسىن مەيدا كور، دەپ، جامدىن چىقتى سەدا.
