--- a/poem.html
+++ b/poem.html
@@ -8,13 +8,18 @@
 </head>
 <body>
 
-
-<h2 class="poem-header">ئەلشىر نەۋائى شېئىرلىرى</h2>
+<div class="poem-page-nav">
+		<a class="nav" style="text-decoration: none;" href="">ئەلشىر نەۋائى شېئىرلىرى</a>
+		<a class="nav" style="text-decoration: none;" href="">يۈسۈپ خاس ھاجىپ شېئىرلىرى</a>
+		<a class="nav" style="text-decoration: none;" href="">ئەھمەت يۈگنەكى شېئىرلىرى</a>
+		<a class="nav" style="text-decoration: none;" href="">ئابدۇرېھىم ئۆتكۈر شېئىرلىرى</a>
+</div>
+<hr>
 <img class="elshir-photo" src="images/Elshir Neva'i.jpg" alt="Elshir Neva'i photo">
 <p class="elshir-bio">
 	ئەلشىر ناۋائى (پارىسچە، چاغاتايچە: نظام الدین على شير هروی; Nizām al-Din ʿAlī Shīr Herawī) - ئۇيغۇر ۋە ئۆزبېك كلاسسىك ئەدەبىياتىدىكى ئەڭ مۇھىم شائىرلارنىڭ بىرى بولۇپلا قالماي، زامانىدىكى دۆلەت ۋە جامائەت ئەربابىدۇر. ناۋائىنىڭ ئىجادىيىتى ۋە ئەسەرلىرى چاغاتاي ئۇيغۇرچىسى ۋە چاغاتاي ئەدەبىياتىنىڭ تەرەققى قىلىشىدا ئىنتايىن مۇھىم رول ئوينىغان.
 </p>
-<p>
+<p class="poem-elshir">
 		<br/> ئەشرەقەت مىن ئەكسى شەمسىلكەئسى ئەنۋارۇلھۇدا،
 		<br/> يار ئەكسىن مەيدا كور، دەپ، جامدىن چىقتى سەدا.
 		<br/> غەيرنەقشىدىن كوڭۇل جامىدا بولسا زەڭگى غەم،
