Updated the home page

--- a/index.html
+++ b/index.html
@@ -2,31 +2,46 @@
 <html dir="rtl" lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Diyar Tori</title>
-	<link rel="stylesheet" href="./CSS/style.css">
-	<h1 class="homepage-header">دىيار تورى باش بېتى</h1>
+    <meta charset="UTF-8">
+    <title>Diyar Tori</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+     -->
+    <link rel="stylesheet" href="./CSS/style2.css">
 </head>
 
 <body>
+    <div class="header container">
 
-	
-	<nav>
-		<ul>
-			<li class="nav"><a style="text-decoration: none;" href="poem.html">شېئىرلار</a></li>
-			<li class="nav"><a style="text-decoration: none;" href="stories.html">ھېكايە - چۆچەكلەر</a></li>
-			<li class="nav"><a style="text-decoration: none;" href="humor.html">يۇمۇرلار</a></li>
-			<li class="nav"><a style="text-decoration: none;" href="news.html">خەۋەرلەر</a></li>
-			<li class="nav"><a style="text-decoration: none;" href="puzzels.html">تېپىشماقلار</a></li>
-			<li class="nav"><a style="text-decoration: none;" href="knowledge.html">بىلىگ</a></li>
-		</ul>
-	</nav>
+        <div class="webname weblogo">
+            <img class="pagelogo" src="./images/Nasreddin.jpg" alt="Nasreddin Photo">
+            <h1 class="homepage-header">دىيار تورى باش بېتى</h1>
+        </div>
+        <div class="webmeanu">
+            <nav>
+                <li class="pagename"><a href="poem.html">باشبەت</a></li>
+                <li class="pagename"><a href="poem.html">ناخشا – مۇزىكا</a></li>
+                <li class="pagename"><a href="stories.html">خەۋەرلەر</a></li>
+                <li class="pagename"><a href="humor.html">كىنو – فىلىملەر</a></li>
+                <li class="pagename"><a href="news.html">ئەدەبىيات</a></li>
+                <li class="pagename"><a href="puzzels.html">ئاۋازلىق ئەسەر</a></li>
+                <li class="pagename"><a href="knowledge.html">ئېلكىتاپ</a></li>
+                <li class="pagename"><a href="knowledge.html">رەسىملەر</a></li>
+                <li class="pagename"><a href="knowledge.html">ئۇلىنىشلار</a></li>
+                <li class="pagename"><a href="knowledge.html">چايخانا</a></li>
+                <li class="pagename"><a href="knowledge.html">يۇمشاق دېتاللار</a></li>
+                <li class="pagename"><a href="knowledge.html">ئويۇنلار</a></li>
+                <li class="pagename"><a href="knowledge.html">بازار</a></li>
+                <li class="pagename"><a href="knowledge.html">ئالاقىلىشىش</a></li>
+                <li class="pagename"><a href="knowledge.html">ئېلانلار</a></li>
+                <li class="pagename"><a href="knowledge.html">بىز ھەققىدە</a></li>
+                <li class="pagename"><a href="knowledge.html">ئېلانلار</a></li>
 
-
-
-
+            </nav>
+        </div>
+    </div>
+    </div>
 </body>
 
-<footer><p>Copyright belongs to Diyar Tori</p></footer>
 
 </html>
